# StaySafe

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/app/: classifier.py  db.py  main.py  models.py  productinfo.py  rules.py  schemas.py  utils.py
backend/app/routers/: ai.py  check.py
frontend/: Dockerfile
frontend/app/: page.tsx
frontend/components/: ResultCard.tsx
staysafe/: next.config.ts  package-lock.json  package.json
staysafe/public/: manifest.json
staysafe/src/app/: globals.css  layout.tsx  page.tsx
staysafe/src/app/api/check/: route.ts
staysafe/src/components/: HistoryList.tsx  ResultCard.tsx  URLCard.tsx
