[project]
name = "staysafe-backend"
version = "0.1.0"

[project.dependencies]
fastapi = "^0.114.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.4"
SQLAlchemy = {version="^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"

# optional dev
pytest = "^8.2.0"
